# orx-concurrent-iter

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: con_iter_of_iter.rs  con_iter_of_iter_small.rs
src/: chunk_puller.rs  chunks_iter.rs  concurrent_collection.rs  concurrent_collection_mut.rs  concurrent_drainable.rs  concurrent_iter.rs  concurrent_iterable.rs  concurrent_iterator.rs  exact_size_concurrent_iter.rs  into_concurrent_iter.rs  item_puller.rs  iter_into_concurrent_iter.rs  lib.rs  next.rs  next_arch.rs
src/arch/: concurrent_collection.rs  concurrent_iterable.rs  has_more.rs  into_concurrent_iter.rs  lib.rs  next.rs
src/arch/enumeration/: enumerated.rs  enumeration.rs
src/arch/iter/: cloned.rs  copied.rs  mod.rs
src/arch/pullers/: flattened_chunk_puller.rs  item_puller.rs  pulled_chunk_iter.rs
src/chain/: chunk.rs  chunk_puller.rs  chunk_puller_known_len_i.rs  chunk_puller_unknown_len_i.rs  con_iter.rs  con_iter_known_len_i.rs  con_iter_unknown_len_i.rs  mod.rs
src/chain/tests/: con_iter.rs
src/cloned/: chunk_puller.rs  con_iter.rs  mod.rs
src/copied/: chunk_puller.rs  con_iter.rs  mod.rs
src/enumerate/: chunk_puller.rs  con_iter.rs  mod.rs
src/enumeration/: element.rs  enumerated.rs  enumeration.rs  is_enumerated.rs  mod.rs  regular.rs
src/implementations/: mod.rs  no_leak_iter.rs  ptr_utils.rs
src/implementations/array_utils/: chunk_puller.rs  chunk_seq_iter.rs  con_iter.rs  into_seq_iter.rs  mod.rs
src/implementations/borrow_kind/: borrow_kind_trait.rs  borrow_mut.rs  borrow_ref.rs  mod.rs
src/implementations/empty/: chunk_puller.rs  con_iter.rs  mod.rs
src/implementations/hash_set/: con_iter.rs
src/implementations/iter/: chunk_puller.rs  chunk_puller_iter.rs  chunk_puller_of_iter.rs  con_iter.rs  con_iter_of_iter.rs  con_iterable.rs  iter_cell.rs  iter_into_con_iter.rs  mod.rs  mut_handle.rs  mut_iter.rs  num_taken.rs
src/implementations/iter_counted/: con_iter_of_iter.rs
src/implementations/iter_x/: chunk_puller_x_of_iter.rs  chunks_iter_x_of_iter.rs  con_iter_x_of_iter.rs  mod.rs  mut_handle.rs  (+1 more)
src/iter/: atomic_counter.rs  atomic_iter.rs  cloned.rs  con_iter.rs  con_iter_x.rs  copied.rs  mod.rs  no_leak_iter.rs  special_iterators.rs
src/pullers/: chunk_iter.rs  chunk_puller.rs  chunks_iter.rs  enumerated_item_puller.rs  flattened_chunk.rs  flattened_chunk_puller.rs  flattened_enumerated_chunk_puller.rs  item_puller.rs  mod.rs  pulled_chunk_iter.rs  single_iter.rs
src/wrappers/: cloned.rs  mod.rs
tests/: array.rs  array_as_slice.rs  atomic.rs  atomic_counter.rs  cloned_slice.rs  con_iter.rs  concurrent_drainable_vec.rs  consume_array.rs  consume_iter.rs  consume_iter_x.rs  consume_vec.rs  consuming_skip_to_end.rs  early_exit.rs  exact_con_iter.rs  from_array.rs  from_cloned_iter.rs  from_cloned_slice.rs  from_iter.rs  from_iter_x.rs  from_range.rs  from_slice.rs  from_vec.rs  iter.rs  iter_x.rs  range.rs  slice.rs  vec.rs
tests_arch/: con_iter.rs  consume_iter_x.rs  from_array.rs  from_cloned_iter.rs  from_cloned_slice.rs  from_slice.rs
(+338 files in other folders)
