[package]
name = "orx-concurrent-iter"
version = "1.30.0"
edition = "2021"
authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
description = "A thread-safe and ergonomic concurrent iterator trait and efficient lock-free implementations."
license = "MIT OR Apache-2.0"
repository = "https://github.com/orxfun/orx-concurrent-iter/"
keywords = ["concurrency", "iterator", "iteration", "atomic", "parallelism"]
categories = ["data-structures", "concurrency", "rust-patterns", "no-std"]

[dependencies]
orx-iterable = "1.2.0"

[dev-dependencies]
orx-pseudo-default = { version = "2.0.0", default-features = false }
orx-pinned-vec = { path = "../orx-pinned-vec" }
orx-fixed-vec = { path = "../orx-fixed-vec" }
orx-split-vec = { path = "../orx-split-vec" }
orx-pinned-concurrent-col = { path = "../orx-pinned-concurrent-col" }
orx-concurrent-bag = { path = "../orx-concurrent-bag" }
test-case = "3.3.1"
criterion = "0.5.1"
rand = "0.9"
rand_chacha = "0.9"
rayon = "1.10.0"

[[bench]]
name = "con_iter_of_iter"
harness = false

[lib]
doctest = false
