[package]
name = "orx-concurrent-iter"
version = "2.1.0"
edition = "2024"
authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
description = "A thread-safe and ergonomic concurrent iterator trait and efficient lock-free implementations."
license = "MIT OR Apache-2.0"
repository = "https://github.com/orxfun/orx-concurrent-iter/"
keywords = ["concurrency", "iterator", "iteration", "atomic", "parallelism"]
categories = ["data-structures", "concurrency", "rust-patterns", "no-std"]

[dependencies]
orx-iterable = { version = "1.3.0", default-features = false }
orx-pseudo-default = { version = "2.1.0", default-features = false }

[dev-dependencies]
orx-pseudo-default = { version = "2.1.0", default-features = false }
orx-pinned-vec = "3.16.0"
orx-fixed-vec = "3.16.0"
orx-split-vec = "3.16.0"
orx-pinned-concurrent-col = "2.13.0"
orx-concurrent-bag = "2.12.0"
test-case = "3.3.1"
criterion = "0.5.1"
rand = "0.9"
rand_chacha = "0.9"
rayon = "1.10.0"

[[bench]]
name = "con_iter_of_iter"
harness = false
